# ptest

./: .gitignore  CMakeLists.txt  additionals.cpp  additionals.hpp  assert_macro.hpp  config.hpp  demo.cpp  macros.hpp  new_test_suite_macro.hpp  pctest_macro.hpp  ptest.cpp  ptest.hpp  ptest_simple_test_macro.hpp  ptest_suite_test_macro.hpp  stats.cpp  stats.hpp  test_macro.hpp
ptest_demo/: CMakeLists.txt  demo.cpp
